# disktools

./: README.md  pyproject.toml  setup.py
src/disktools/: cli.py  disk_usage.py
tests/: disktools  test_diskusage.py
